--- a/registration/registration-client/src/main/resources/messages_en.properties
+++ b/registration/registration-client/src/main/resources/messages_en.properties
@@ -50,6 +50,7 @@ FACE_CAPTURE_ERROR = Please capture applicant face properly. Click on "Take Phot
 EXCEPTION_PHOTO_CAPTURE_ERROR = Please capture exception photo properly. Click on "Take Photo" again to capture it.#TYPE#ERROR
 PARENT_FACE_CAPTURE_ERROR = Please capture Parent / Guardian face properly. Click on "Take Photo" again to capture face.#TYPE#ERROR
 FACE_SCANNING_ERROR = Face can not be captured#TYPE#INFO
+FACE_DUPLICATE_ERROR = Duplicate face found#TYPE#INFO
 DEVICE_ONBOARD_NOTIFICATION = Device is not Registered or Expired#TYPE#ERROR
 
 #Lock Account
