--- a/registration/registration-client/src/main/resources/messages_fr.properties
+++ b/registration/registration-client/src/main/resources/messages_fr.properties
@@ -50,6 +50,7 @@ FACE_CAPTURE_ERROR = S'il vous plaît capturer le visage du demandeur correctemen
 EXCEPTION_PHOTO_CAPTURE_ERROR = S'il vous plaît capturer photo d'exception correctement. Cliquez à nouveau sur "Prendre une photo" pour la capturer.#TYPE#ERROR
 PARENT_FACE_CAPTURE_ERROR = Veuillez capturer le visage du parent / tuteur correctement. Cliquez à nouveau sur "Prendre une photo" pour capturer le visage.#TYPE#ERROR
 FACE_SCANNING_ERROR = Le visage ne peut pas être capturé#TYPE#INFO
+FACE_DUPLICATE_ERROR = Dupliquer le visage trouvé#TYPE#INFO
 DEVICE_ONBOARD_NOTIFICATION = Le périphérique n'est pas enregistré ou a expiré#TYPE#ERROR
 
 #Lock Account#
