--- a/registration/registration-client/src/main/resources/messages_en.properties
+++ b/registration/registration-client/src/main/resources/messages_en.properties
@@ -398,14 +398,14 @@ LAST_UPDATED=Last Uploaded - on
 409_MESSAGE=Device is not available
 STREAMING_PREP_MESSAGE=Streaming is starting
 STREAMING_INIT_MESSAGE=Streaming is on
+STREAMING_CLOSED_MESSAGE = Streaming closed
 CAPTURING=Capturing
 404_MESSAGE=Please start the live stream
 ALERT_NOTE_LABEL=Note
 ALERT_FAILED_LABEL=Failed
 SECONDARY_LANG_MISSING=Language choice missing in Configuration, cannot proceed ahead without the same#TYPE#INFO
 PRIMARY_LANG_MISSING=Platform language is missing. Please check with Admin#TYPE#INFO
-<<<<<<< HEAD
-=======
+
 
 AUTH_TOKEN_NOT_FOUND=Unable to fetch authorization token
->>>>>>> 0120_reg_team_dev
+
