--- a/registration/registration-client/src/main/resources/messages_fr.properties
+++ b/registration/registration-client/src/main/resources/messages_fr.properties
@@ -396,3 +396,6 @@ SECONDARY_LANG_MISSING=Choix de langue manquant dans la configuration, impossibl
 PRIMARY_LANG_MISSING=La langue de la plateforme est manquante. S'il vous plaît vérifier avec Admin#TYPE#INFO
 
 AUTH_TOKEN_NOT_FOUND=Impossible de récupérer le jeton d'autorisation
+
+
+STREAMING_CLOSED_MESSAGE = Streaming fermé
