--- a/registration/registration-client/src/main/resources/labels_en.properties
+++ b/registration/registration-client/src/main/resources/labels_en.properties
@@ -29,6 +29,7 @@ parentUinId=Parent/Guardian UIN
 uinUpdateNavLbl=/ UIN Update
 parentName=Parent/Guardian Name
 scan=Scan
+stream=Stream
 titleDemographicPane=Demographic Details
 poaDocuments=POA Document
 poiDocuments=POI Document
