--- a/registration/registration-client/src/main/resources/labels_fr.properties
+++ b/registration/registration-client/src/main/resources/labels_fr.properties
@@ -30,6 +30,7 @@ parentUinId=Parent / tuteur UIN
 uinUpdateNavLbl=/ Mise à jour UIN
 parentName=Nom du parent / tuteur
 scan=Balayage
+stream=Courant
 titleDemographicPane=Détails démographiques
 poaDocuments=Document de POA
 poiDocuments=Document de POI
