--- a/registration/registration-client/src/main/resources/labels_fr.properties
+++ b/registration/registration-client/src/main/resources/labels_fr.properties
@@ -344,5 +344,5 @@ synchronizingData = Synchroniser les données
 mappingDevices = Cartographie des appareils à la machine
 uploadingData = Téléchargement de données locales / d'enregistrement
 updatingBiometrics = Mise à jour de la biométrie d'opérateur
-saveToDevice=Remarque: Le choix d'enregistrer les paquets sur l'appareil exportera par défaut tous les paquets répertoriés
+saveToDeviceLable=Remarque: Le choix d'enregistrer les paquets sur l'appareil exportera par défaut tous les paquets répertoriés
 parentOrGuardian = Parent ou tuteur
