--- a/registration/registration-client/src/main/resources/messages_en.properties
+++ b/registration/registration-client/src/main/resources/messages_en.properties
@@ -1,4 +1,5 @@
 #Login
+UNABLE_LOAD_LOGIN_SCREEN_LANGUAGE_NOT_SET = The system has encountered a technical error. Administrator to setup the necessary language configuration(s)#TYPE#ERROR
 UNABLE_LOAD_LOGIN_SCREEN = Unable to load Login Screen#TYPE#ERROR
 BIOMETRIC_DISABLE_SCREEN_1 = The mode of authentication is not supported by the process level configuration.#TYPE#INFO
 BIOMETRIC_DISABLE_SCREEN_2 = Please contact the administrator.#TYPE#INFO
